IntegerPickers now maintain their correct height and position. ### Cause IntegerPickers, being inline elements, must have a `vertical-align` property set to remain vertically aligned with each other. They were becoming misaligned because of an incorrect height calculation done by older webkit.
Enyo-DCO-1.1-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/css/moonstone-dark.css
+++ b/css/moonstone-dark.css
@@ -1726,6 +1726,7 @@
   display: inline-block;
   position: relative;
   text-align: center;
+  vertical-align: top;
 }
 /*disabled*/
 .moon-scroll-picker-container.disabled {
